--- a/notebooks/Tutorial_Creating_Q2Q_transform.ipynb
+++ b/notebooks/Tutorial_Creating_Q2Q_transform.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "A Q2Q transform is a functional relationship between what you have and what you would like to have. It applies to random variables, because the relationship is between the quantiles of the input and the target random variables.\n",
     "\n",
-    "In this context, this tutorial is to generate Q2Q functions between modelled (input) and historical (target) renewable generation time series, for solar and wind power. Unless stated otherwise, hourly time series for one year will be considered.\n",
+    "In this context, this tutorial shows how to generate Q2Q functions between modelled (input) and historical (target) renewable generation time series, for solar and wind power. Unless stated otherwise, hourly time series for one year will be considered.\n",
     "\n",
     "This Q2Q encapsulate the modelling errors in a statistical sense, and can be used to improve the modelling of renewable generation in tasks related to energy system optimisation. Further details can be found at https://arxiv.org/abs/2412.06571."
    ]
@@ -33,7 +33,7 @@
     "\n",
     "- a time series with historical data, $g_{H,t}$, for a specific year of interest.\n",
     "\n",
-    "- a time series with modelled data, $g_{M,t}$, for the same year.\n",
+    "- a time series with modelled data, $g_{M,t}$, for the same time period.\n",
     "\n",
     "$t$ refers to time index."
    ]
@@ -49,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Obtaining historical data on renewable generation can be difficult, if not impossible.\n",
+    "Obtaining historical data of renewable generation can be difficult, if not impossible.\n",
     "\n",
     "Generation time series for Spain can be retrieved at https://api.esios.ree.es/."
    ]
